# mabat-agent

./: CMakeLists.txt  README.md
examples/: example_output.json
src/: filesystem_scanner.cpp  filesystem_scanner.h  idiscovery_scanner.h  inventory.h  json_exporter.cpp  json_exporter.h  main.cpp  normalizer.cpp  normalizer.h  os_catalog_scanner.cpp  os_catalog_scanner.h  persistence_scanner.cpp  persistence_scanner.h  registry_scanner.cpp  software_entry.h
src/helper/: json_exporter.h  normalizer.h
src/scanners/: autorun_scanner.cpp  autorun_scanner.h  filesystem_scanner.cpp  idiscovery_scanner.h  registry_scanner.cpp  registry_scanner.h  service_scanner.cpp  service_scanner.h
web-ui/: README.md  app.js  index.html  styles.css
